Fix focus border transition. Make input have invisible white border.

--- a/notes/css/style.css
+++ b/notes/css/style.css
@@ -40,10 +40,13 @@ html {
 
 	font-size: 20px;
 
-	border: 0 solid #000;
+	border: 1px solid #fff;
 
 	-webkit-box-shadow: none;
 	box-shadow: none;
+
+	-webkit-transition: none;
+	transition: none;
 }
 
 #outline input:focus {
